--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
+    "dev": "next dev --turbopack",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
     "build": "NODE_ENV=production next build",
@@ -48,7 +48,7 @@
     "next": "15.5.9",
     "patch-package": "^8.0.0",
     "react": "^19.2.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.0.4",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.15.1",
